# window-pill

./: .gdbinit  .gitignore  Cargo.toml  log.bat  memory.x  ocd-lila.bat  ocd.bat  openocd.gdb  run.bat  sizeinfo.bat  stlink-v2-lila.cfg  stm32f1x.cfg
.cargo/: config
examples/: hw_test.rs
src/: beeper.rs  heating.rs  lib.rs  main.rs  roll.rs  shutter.rs  valve.rs
