[package]
authors = ["Tibor Prokai <pro@sch.bme.hu>"]
categories = ["embedded", "no-std"]
description = "A blue pill based board: window unit`"
keywords = ["arm", "cortex-m", "template"]
license = "MIT OR Apache-2.0"
name = "window-pill"
repository = "https://github.com/tib888/window-pill"
version = "0.1.0"
edition = "2018"

[dependencies]
cortex-m = "0.6.1"
cortex-m-rt = "0.6.10"
cortex-m-semihosting = "0.3.5"
typenum = "1.11.2"
nb = "0.1.2"
panic-halt = "0.2.0"
# heapless = "0.5.1"
# owned-singleton = "0.1.0"

[dependencies.embedded-hal]
version = "0.2.3"
features = ["unproven"]

# [dependencies.cortex-m-rtfm]
# git = "https://github.com/japaric/cortex-m-rtfm"
# features = ["timer-queue"]
# version="0.5.0-alpha.1"

[dependencies.stm32f103xx]
features = ["rt"]
version = "0.11.0"

[dependencies.stm32f1xx-hal]
# git = "https://github.com/tib888/stm32f1xx-hal"
path = "../stm32f1xx-hal"
version = "0.4.0"
features = ["stm32f103", "rt"]

[dependencies.ir]
# git = "https://github.com/tib888/ir"
path = "../ir"
version = "0.3.0"

[dependencies.onewire]
# git = "https://github.com/tib888/onewire"
path = "../onewire"
version = "0.5.0"

[dependencies.room-pill]
path = "../room-pill"
version = "0.4.0"

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations # turn this off to win flash space, but will break onewire timing, need readjust
#panic ='halt'
