[package]
authors = ["Tibor Prokai <pro@sch.bme.hu>"]
categories = ["embedded", "no-std"]
description = "A blue pill based board: window unit`"
keywords = ["arm", "cortex-m", "template"]
license = "MIT OR Apache-2.0"
name = "window-pill"
repository = "https://github.com/tib888/window-pill"
version = "0.1.0"
edition = "2018"

[features]
default = ["itm-debug"] #, "semihosting-debug" ] 
itm-debug = []
semihosting-debug = []

[dependencies]
cortex-m = "0.6.2"
cortex-m-rt = "0.6.11"
cortex-m-semihosting = "0.3.5"
typenum = "1.11.2"
nb = "0.1.2"
panic-halt = "0.2.0"
panic-itm = "0.4.1"
# heapless = "0.5.1"
# owned-singleton = "0.1.0"

# [dependencies.num-traits]
# version = "0.2.8"
# default-features = false

[dependencies.embedded-hal]
version = "0.2.3"
features = ["unproven"]

# [dependencies.cortex-m-rtfm]
# git = "https://github.com/japaric/cortex-m-rtfm"
# features = ["timer-queue"]
# version="0.5.0-alpha.1"

# [dependencies.stm32f103xx]
# features = ["rt"]
# version = "0.11.0"

[dependencies.stm32f1xx-hal]
# git = "https://github.com/tib888/stm32f1xx-hal"
path = "../stm32f1xx-hal"
version = "0.5.3"
features = ["stm32f103", "medium"] #, "rt"


[dependencies.onewire]
# git = "https://github.com/tib888/onewire"
path = "../onewire"
version = "0.5.0"

[dependencies.room-pill]
path = "../room-pill"
version = "0.4.0"

# https://rust-embedded.github.io/book/unsorted/speed-vs-size.html
[profile.release]
#codegen-units = 1 # with this better optimizations and smaller size can be achieved, but debugability will break
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations # turn this off to win flash space, but will break onewire timing, need readjust
#panic ='halt'
#panic ='itm'

# optimize other (*) modules to size with this override below:
[profile.dev.package."*"] # +
codegen-units = 1
opt-level = "z" # better optimize for size than "s"

# optimize the `onewire` crate for speed
[profile.dev.package.onewire]
codegen-units = 1
opt-level = 3